# fnorder-rs

./: Cargo.toml
src/: lib.rs  utils.rs
src/words/: actions.rs  adjectives.rs  intros.rs  mod.rs  names.rs  nouns.rs  places.rs  prepositions.rs  pronouns.rs
