[package]
name = "fnorder-rs"
version = "1.1.0"
authors = ["Patrick Burroughs (Celti) <celti@celti.name>"]

description = "Totally non-randomly generated messages from the Illuminati."
license = "MIT"
readme = "README.md"

homepage = "http://www.sjgames.com/misc/fnord.html"
repository = "https://github.com/btwiuse/fnorder-rs"

edition = "2024"

[lib]
name = "fnorder"
path = "src/lib.rs"

[[bin]]
name = "fnorder"
path = "src/bin/fnorder.rs"

[dependencies]
rand = "0.9"
